--- a/templates/header.njk
+++ b/templates/header.njk
@@ -1,5 +1,5 @@
-
-
 <header>
-    <h1>Blog</h1>
+    <span><a href="/">Home</a></span>
+    <span><a href="/blog">Blog</a></span>
+    <span><a href="/about">About</a></span>
 </header>
