--- a/templates/post.njk
+++ b/templates/post.njk
@@ -20,7 +20,7 @@
             {{ space() }}
             <a href="">{{ tag -}}</a>
         {% else %}
-            No author.
+            No tags.
         {% endfor %}
     </p>
     <article>
