--- a/templates/blog.njk
+++ b/templates/blog.njk
@@ -6,6 +6,7 @@
         {% for post in blog_posts %}
             <li>
                 <a href="{{ post.slug }}">{{ post.title }}</a>
+                Posted {{post.date_published}}
             </li>
         {% else %}
             No blog posts.
