--- a/templates/base.njk
+++ b/templates/base.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>{{ title }}</title>
+    <title>{{ title }} | {{ meta.title }}</title>
     <meta name="description" content="TODO">
     <meta name="author" content="TODO">
 
