Implement Author pages.

--- a/templates/base.njk
+++ b/templates/base.njk
@@ -1,4 +1,5 @@
 {# All pages on your site should inherit from this base template #}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,8 +7,10 @@
     <title>{{ title }} | {{ meta.title }}</title>
     <meta name="description" content="TODO">
     <meta name="author" content="TODO">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="/public/css/inter.css">
+    <link rel="stylesheet" href="/public/css/new.css">
 
   </head>
 
