--- a/templates/footer.njk
+++ b/templates/footer.njk
@@ -1,2 +1,3 @@
-<footer>By <a href="https://github.com/mh15">Matt Hall</a>
+<footer>
+Built with <a href="https://github.com/mh15/neanderthal">neanderthal</a>, the static blog generator by <a href="https://github.com/mh15">Matt Hall</a>
 </footer>
