--- a/defaults/templates/base.njk
+++ b/defaults/templates/base.njk
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
 
     <title>{{ title }} | {{ meta.title }}</title>
-    <meta name="description" content="TODO">
-    <meta name="author" content="TODO">
+    <meta name="description" content="todo">
+    <meta name="author" content="todo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="neanderthal-version" content="{{ version }}">
 
     <link rel="stylesheet" href="/public/css/inter.css">
     <link rel="stylesheet" href="/public/css/new.css">
